fix 1/2: dark mode

--- a/tasks-page/main.css
+++ b/tasks-page/main.css
@@ -296,6 +296,9 @@ small {
     color: var(--purple) !important;
     background-color: #f18b8b;
 }
+.classModal{
+    background-color: var(--background);
+}
 /* ANIMATIONS */
 
 .downToUpAnimation{
